# tessera

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.de.md  README.md  constraints.txt  pyproject.toml  sources.example.yaml  sources.yaml
.github/: dependabot.yml
.github/workflows/: change-diff.yml  contract-check.yml  link-rot.yml
docs/: data-contract.md  local-model.de.md  local-model.md  maschinerie-zuerich.CLAUDE.md  process.schema.json  reproducibility.md  v1-execution-plan.md  v1-pipeline.md
examples/: README.md  baugesuch.json  extensions-showcase.json  hund-anmelden.json  invalid-binding-value-in-condition.json  invalid-binding-value-in-label.json  invalid-grounding-verifiziert.json  invalid-high-risk-ungrounded.json  invalid-high-risk-word-number.json
reports/: README.md  coverage.md  scraping-compliance.md
reports/fingerprints/: README.md  fundsache.json  hund-anmelden.json  kita-platz.json  parkplatz.json  umzug-melden.json
scripts/: tessera.ps1  validate_contract.py
src/tessera/: __init__.py  binding.py  cli.py  component.py  config.py  contract.py  contracts.py  crawl.py  diff.py  extract.py  grounding.py  merge.py  pr.py  preflight.py  reach.py  registry.py  risk.py  schema.py  screening.py  steps.py  verify.py
src/tessera/extractors/: __init__.py  veranstaltung.py
tests/: run_checks.py  test_binding.py  test_component.py  test_contract_fields.py  test_diff.py  test_extractors_veranstaltung.py  test_grounding.py  test_merge.py  test_pipeline_integration.py  test_pr_body.py  test_preflight_gate.py  test_registry.py  test_reproducibility.py  test_risk.py  test_screening.py  test_verify.py
