[project]
name = "tessera"
version = "0.0.1"
description = "Open AI agents that turn public-sector processes into machine-readable building blocks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "malkreide" }]
keywords = ["civic-tech", "open-government", "ai-agents", "e-government", "swiss-open-data"]

# NOTE: This is a starting manifest. The actual pipeline is built in v1 via Claude Code.
# Pin/adjust versions when the pipeline is implemented.
dependencies = [
    "crawl4ai",       # HTML -> clean Markdown
    "pydantic>=2",    # strict schema
    "pydantic-ai",    # structured LLM extraction
    "pyyaml",         # read sources.yaml
    "httpx",          # I14Y public API
    "openpyxl",       # read eCH-0070 inventory (XLSX)
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
tessera = "tessera.cli:main"   # placeholder; implemented in v1

[project.urls]
Homepage = "https://github.com/malkreide/tessera"
"Feeds" = "https://github.com/malkreide/maschinerie-zuerich"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]
