[project]
name = "tessera"
version = "0.0.1"
description = "Open AI agents that turn public-sector processes into machine-readable building blocks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "malkreide" }]
keywords = ["civic-tech", "open-government", "ai-agents", "e-government", "swiss-open-data"]

dependencies = [
    "crawl4ai",       # HTML -> clean Markdown
    "pydantic>=2",    # strict schema
    "pydantic-ai",    # structured LLM extraction
    "pyyaml",         # read sources.yaml
    "httpx",          # I14Y public API
    "openpyxl",       # read eCH-0070 inventory (XLSX)
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# Fallback-Extraktor, falls Crawl4AI/Playwright in der Umgebung nicht laeuft
# (httpx + Trafilatura); Nutzung wird in den Snapshot-Metadaten vermerkt.
crawl-fallback = ["trafilatura"]

[project.scripts]
tessera = "tessera.cli:main"

[project.urls]
Homepage = "https://github.com/malkreide/tessera"
"Feeds" = "https://github.com/malkreide/maschinerie-zuerich"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]
