[project]
name = "tessera"
version = "0.0.1"
description = "Open AI agents that turn public-sector processes into machine-readable building blocks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "malkreide" }]
keywords = ["civic-tech", "open-government", "ai-agents", "e-government", "swiss-open-data"]

# Versionsgrenzen: Untergrenze = getesteter Stand (2026-07-04, PyPI-verifiziert),
# Obergrenze = naechster Major (Breaking-Change-Schutz; Repro via constraints
# in den CI-Workflows). Bewusst keine exakten Pins hier — tessera ist eine
# Anwendung, exakt gepinnt wird in der CI.
dependencies = [
    "crawl4ai>=0.9,<1",       # HTML -> clean Markdown (nur SPA-Fallback)
    "pydantic>=2,<3",         # strict schema
    "pydantic-ai>=2.5,<3",    # structured LLM extraction
    "pyyaml>=6,<7",           # read sources.yaml
    "httpx>=0.27,<1",         # I14Y public API + SSR-Crawl
    "openpyxl>=3.1,<4",       # read eCH-0070 inventory (XLSX)
    # SSR-first-Extraktor (crawl._ssr_fetch): seit dem SSR-first-Umbau eine
    # RUNTIME-Pflicht, kein optionales Extra mehr.
    "trafilatura>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
tessera = "tessera.cli:main"

[project.urls]
Homepage = "https://github.com/malkreide/tessera"
"Feeds" = "https://github.com/malkreide/maschinerie-zuerich"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]
